--- a/Mephist/Mephist.csproj
+++ b/Mephist/Mephist.csproj
@@ -6,12 +6,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Content\Employees\" />
-    <Folder Include="wwwroot\Content\EducationMaterials\" />
+    <Folder Include="wwwroot\assets\" />
   </ItemGroup>
 
 </Project>
