--- a/Mephist/appsettings.json
+++ b/Mephist/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=VONNYPC;Database=Mephist;Trusted_Connection=True;"
+    "PCMSSQLSERVER": "Server=VONNYPC;Database=Mephist;Trusted_Connection=True;",
+    "LaptopSQLExpress": "Server=SQLEXPRESS;Database=Mephist;Trusted_Connection=True;",
+    "SQLite": "Data Source=Mephist.db"
   },
   "Logging": {
     "LogLevel": {
