--- a/Mephist/package.json
+++ b/Mephist/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {
     "jquery": "3.5.1",
-    "bootstrap": "4.5.3",
+    "bootstrap": "5.0.0-alpha3",
     "jquery-ui": "1.12.1",
     "commitplease": "2.3.0",
     "grunt": "0.4.5",
