--- a/Mephist/package.json
+++ b/Mephist/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "5.0.0-beta2",
     "jquery-ui": "1.12.1",
     "sortablejs": "1.13.0",
-    "jquery-sortablejs": "1.6.1"
+    "jquery-sortablejs": "1.6.1",
+    "mdbootstrap": "4.19.2"
   }
 }
